Java facelift (#43)
* Remove unnecessary throws

* Use try-with-resources where possible

* Use diamond operator where possible

* Use StringBuilder where possible

* Remove raw use of parameterized class

* Use method reference where possible

* Use List#of where possible

* Remove unused imports

* Simplify map operations

* Clean up FileUtils usage

* Remove redundant suppressions

* Fix WMI_WRONG_MAP_ITERATOR

* Add missing override annotations

* Remove unnecessary parentheses

* Properly close streams

* Use Set#of where possible

* Use String#join where possible